# quantum_error_correction_challenge

./: .gitignore  README.md  pyproject.toml  run.py  solve.py
docker/: evaluator.Dockerfile
docs/: qec_quickstart.html  qec_quickstart.md  qec_quickstart.txt
examples/: submission_template.py
scripts/: mvp_smoke_test.sh  mvp_start.sh  mvp_status.sh  mvp_stop.sh
src/qec_benchmark/: __init__.py  baselines.py  cli.py  config.py  dataset.py  evaluation.py  models.py  noise.py  server.py  stim_surface_code.py  submission_runner.py  web_ui.py  worker.py
tests/: test_baselines.py  test_constraints.py  test_dataset.py  test_evaluation.py  test_noise.py  test_server_api_limits.py  test_server_docker.py  test_server_queue.py  test_server_submissions_api.py  test_server_submissions_list.py  test_server_ui.py  test_submission_runner.py
