[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec_benchmark"
version = "0.1.0"
description = "Benchmark tooling for correlated-noise surface-code decoding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "QEC Benchmark Team"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "stim>=1.15",
  "pymatching>=2.3",
  "scikit-learn>=1.4",
  "pydantic>=2.7",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[project.scripts]
qec-benchmark-generate = "qec_benchmark.cli:generate_main"
qec-benchmark-eval = "qec_benchmark.cli:eval_main"
qec-benchmark-server = "qec_benchmark.server:main"
qec-benchmark-worker = "qec_benchmark.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
