[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec_benchmark"
version = "0.1.0"
description = "Benchmark challenge for correlated-noise surface-code decoding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "QEC Benchmark Team"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "stim>=1.15",
  "pymatching>=2.3",
  "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
