[project]
name = "qec-benchmark"
version = "0.1.0"
description = "Benchmark challenge for correlated-noise surface-code decoding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "QEC Benchmark Team"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "stim>=1.15",
  "pymatching>=2.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qec_benchmark"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
